--- a/home/wiki/App/Import/Import_overview.html
+++ b/home/wiki/App/Import/Import_overview.html
@@ -62,13 +62,13 @@
       </li>
     </ul>
     <p>
-      For more info, see <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_4" title="App/Import/Download Central" class="xowa-visited">App/Import/Download_Central</a>
+      For more info, see <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_4" title="App/Import/Download Central">App/Import/Download_Central</a>
     </p>
     <h2>
       <span class="mw-headline" id="Import_online_by_click">Import online by click</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_5" title="Dashboard/Import/Online" class="xowa-visited">Import online</a> page lists 800+ wikis that can be imported by clicking on a link.
+      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_5" title="Dashboard/Import/Online">Import online</a> page lists 800+ wikis that can be imported by clicking on a link.
     </p>
     <ul>
       <li>
