--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -222,7 +222,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Include latest download central database.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_3" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_3" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h2>
@@ -238,7 +238,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_4" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_4" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -248,7 +248,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_5" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_5" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h3>
@@ -334,7 +334,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Xtn/Scripting.html" id="xolnki_6" title="App/Xtn/Scripting" class="xowa-visited">App/Xtn/Scripting</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Xtn/Scripting.html" id="xolnki_6" title="App/Xtn/Scripting">App/Xtn/Scripting</a>
       </dd>
     </dl>
     <p>
@@ -428,7 +428,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_7" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_7" title="Options/Shortcuts">Options/Shortcuts</a>
       </dd>
     </dl>
     <ul>
@@ -464,7 +464,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Files/Deletion.html" id="xolnki_9" title="Dashboard/Files/Deletion" class="xowa-visited">Dashboard/Files/Deletion</a> <a href="https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Files/Deletion.html" id="xolnki_9" title="Dashboard/Files/Deletion">Dashboard/Files/Deletion</a> <a href="https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa</a>
       </dd>
     </dl>
     <ul>
@@ -710,7 +710,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Fix regex pattern for matching end of string.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Rimbaud_le_fils" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Rimbaud_le_fils</a> <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_11" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Rimbaud_le_fils" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Rimbaud_le_fils</a> <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_11" title="Diagnostics/Scribunto/Luaj">Diagnostics/Scribunto/Luaj</a>
       </dd>
     </dl>
     <ul>
@@ -855,7 +855,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Xtn/Page_sync.html" id="xolnki_12" title="App/Xtn/Page sync" class="xowa-visited">App/Xtn/Page_sync</a> <a href="http://xowa.org/home/wiki/Options/Page_sync.html" id="xolnki_13" title="Options/Page sync" class="xowa-visited">Options/Page_sync</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Xtn/Page_sync.html" id="xolnki_12" title="App/Xtn/Page sync">App/Xtn/Page_sync</a> <a href="http://xowa.org/home/wiki/Options/Page_sync.html" id="xolnki_13" title="Options/Page sync">Options/Page_sync</a>
       </dd>
     </dl>
     <ul>
@@ -1045,7 +1045,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_15" title="Dev/Command-line/Dumps" class="xowa-visited">Dev/Command-line/Dumps</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_15" title="Dev/Command-line/Dumps">Dev/Command-line/Dumps</a>
       </dd>
     </dl>
     <ul>
@@ -1545,7 +1545,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Change_log/2016.html" id="xolnki_22" title="Change log/2016" class="xowa-visited">2016 Change Log</a>
+        <a href="http://xowa.org/home/wiki/Change_log/2016.html" id="xolnki_22" title="Change log/2016">2016 Change Log</a>
       </li>
       <li>
         <a href="http://xowa.org/home/wiki/Change_log/2015.html" id="xolnki_23" title="Change log/2015">2015 Change Log</a>
