--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -521,7 +521,7 @@
     </p>
     <ul>
       <li>
-        (add) File: Added caching system for fsdb thumbs. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_10" title="Options/Files" class="xowa-visited">Options/Files</a>
+        (add) File: Added caching system for fsdb thumbs. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_10" title="Options/Files">Options/Files</a>
       </li>
       <li>
         (add) Release: New build for Mac OS X 64 bit.
@@ -576,7 +576,7 @@
     </p>
     <ul>
       <li>
-        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia" class="xowa-visited">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases">Dashboard/Image_databases</a>
+        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </li>
       <li>
         (fix) [broken since:v0.4.4] Xnde: Incorrect parsing of xml attributes with embedded apostrophe / quote; EX:a = "b'c" -&gt; a = "bc". See: <a href="http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland" rel="nofollow" class="external free">http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland</a>
@@ -871,7 +871,7 @@
         (fix) [broken since:v0.9.3] Gallery: Gallery items with no caption would cause page to fail; EX:&lt;gallery&gt;File:A.png&lt;/gallery&gt; {detected by Schnark}. See: <a href="http://de.wikipedia.org/wiki/Lewis_Carroll" rel="nofollow" class="external free">http://de.wikipedia.org/wiki/Lewis_Carroll</a>
       </li>
       <li>
-        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window" class="xowa-visited">Options/Window</a>
+        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window">Options/Window</a>
       </li>
       <li>
         (file) [broken since:v0.9.3] Import: Search version2 fails if explicitly added to normal import (which uses search version2 by default).
@@ -1130,7 +1130,7 @@
     </p>
     <ul>
       <li>
-        (done) Import: Maintenance view to identify outdated wikis {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_22" title="Dashboard/Wiki maintenance" class="xowa-visited">Dashboard/Wiki_maintenance</a>
+        (done) Import: Maintenance view to identify outdated wikis {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_22" title="Dashboard/Wiki maintenance">Dashboard/Wiki_maintenance</a>
       </li>
     </ul>
     <p>
@@ -1268,7 +1268,7 @@
         (add) Options: Reorganized options pages.
       </li>
       <li>
-        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category" class="xowa-visited">Options/Category</a>
+        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category">Options/Category</a>
       </li>
       <li>
         (add) Wikidata: Internationalization for Wikidata JSON formatter {contributed by Schnark}.
@@ -1497,7 +1497,7 @@
         (add) Wikidata: Lua Wikibase support added. See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/WikibaseLibrary.html" id="xolnki_34" title="Diagnostics/Scribunto/WikibaseLibrary">Diagnostics/Scribunto/WikibaseLibrary</a>
       </li>
       <li>
-        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
+        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
       </li>
       <li>
         (fix) Import: Import failed to "read from file" if wiki.unzip was present.
@@ -2215,7 +2215,7 @@
     </p>
     <ul>
       <li>
-        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML" class="xowa-visited">Options/HTML</a>
+        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML">Options/HTML</a>
       </li>
       <li>
         (add) Visited pages now color-coded {assisted by Schnark}
