--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -706,7 +706,7 @@
     </p>
     <ul>
       <li>
-        Doc: Add note explaining image tarballs and tarball status {suggested by anonymous}. See: <a href="http://xowa.org/home/wiki/Archive/Usage/Offline_images.html" id="xolnki_6" title="Archive/Usage/Offline images">Archive/Usage/Offline_images</a> <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_7" title="App/Import/English Wikipedia" class="xowa-visited">App/Import/English_Wikipedia</a>
+        Doc: Add note explaining image tarballs and tarball status {suggested by anonymous}. See: <a href="http://xowa.org/home/wiki/Archive/Usage/Offline_images.html" id="xolnki_6" title="Archive/Usage/Offline images">Archive/Usage/Offline_images</a> <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_7" title="App/Import/English Wikipedia">App/Import/English_Wikipedia</a>
       </li>
     </ul>
     <p>
@@ -1341,7 +1341,7 @@
         Module.Popups: Do not omit namespace for anchor popups (affects popups showing text from wrong page when link was to non-mainspace page). See: <a href="https://en.wikipedia.org/wiki/Project:Sandbox" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Project:Sandbox</a>
       </li>
       <li>
-        Gui: Do not open external link in xowa if link ends in .html; EX:http://jtidy.sourceforge.net/license.html. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_10" title="Help/About" class="xowa-visited">Help/About</a>
+        Gui: Do not open external link in xowa if link ends in .html; EX:http://jtidy.sourceforge.net/license.html. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_10" title="Help/About">Help/About</a>
       </li>
       <li>
         Html: Show caption text in title (affects tooltips missing caption text); EX:"a [[b]]" -&gt; title="a b" x&gt; "a ". See: <a href="https://en.wikipedia.org/wiki/Earth" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Earth</a>
@@ -1845,7 +1845,7 @@
         Module.Popups: Increase hover show time from 400 to 600 ms (affects number of accidental hovers while scrolling through page). See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_21" title="Options/Popups">Options/Popups</a>
       </li>
       <li>
-        Options: Add options for configuring paths of other apps. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_22" title="Options/Files" class="xowa-visited">Options/Files</a> <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_23" title="Options/Math">Options/Math</a> <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_24" title="Options/Score">Options/Score</a> <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_25" title="Options/Import" class="xowa-visited">Options/Import</a>
+        Options: Add options for configuring paths of other apps. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_22" title="Options/Files">Options/Files</a> <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_23" title="Options/Math">Options/Math</a> <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_24" title="Options/Score">Options/Score</a> <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_25" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -1926,7 +1926,7 @@
         Parser.Underscore: Close preceding paragraph for __TOC__ only (not __NOTOC__) (affects extra line break in one known popup). See: <a href="https://en.wikipedia.org/wiki/Spain" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Spain</a>
       </li>
       <li>
-        Options: Allow "&lt;" inside &lt;input&gt;'s value. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_26" title="Options/Files" class="xowa-visited">Options/Files</a>
+        Options: Allow "&lt;" inside &lt;input&gt;'s value. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_26" title="Options/Files">Options/Files</a>
       </li>
     </ul>
     <p>
@@ -2295,7 +2295,7 @@
     </p>
     <ul>
       <li>
-        Gui: Add default shortcut for Font Reset; EX:Ctrl + 0 {requested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_45" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        Gui: Add default shortcut for Font Reset; EX:Ctrl + 0 {requested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_45" title="Options/Shortcuts">Options/Shortcuts</a>
       </li>
     </ul>
     <p>
@@ -2551,7 +2551,7 @@
     </p>
     <ul>
       <li>
-        Gui: Support customizable keyboard shortcuts. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_55" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        Gui: Support customizable keyboard shortcuts. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_55" title="Options/Shortcuts">Options/Shortcuts</a>
       </li>
       <li>
         Gui: Update UI language dynamically (do not require restart). See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_56" title="Options/Language">Options/Language</a>
@@ -2611,7 +2611,7 @@
         Lang: Add lang codes for other minor languages; EX:akz; sxu; etc...
       </li>
       <li>
-        Xtns.Xowa_cmd: Do not double-parse content inside &lt;xowa_cmd&gt; (affects references showing up twice in XOWA home wiki). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_59" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        Xtns.Xowa_cmd: Do not double-parse content inside &lt;xowa_cmd&gt; (affects references showing up twice in XOWA home wiki). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_59" title="Options/Shortcuts">Options/Shortcuts</a>
       </li>
       <li>
         Log: Removed unused log messages. See: <a href="http://xowa.org/home/wiki/Special:XowaSystemData%3Ftype%3Dlog_session.html" id="xolnki_60" title="Special:XowaSystemData?type=log session">Special:XowaSystemData?type=log session</a>
@@ -2659,7 +2659,7 @@
         Html.Jtidy: Add Jtidy for fixing invalid HTML (currently optional; will become default). See: bin/any/java/jtidy/jtidy-r938.jar
       </li>
       <li>
-        Gui: Add Options page for Shortcuts (read-only). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_61" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        Gui: Add Options page for Shortcuts (read-only). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_61" title="Options/Shortcuts">Options/Shortcuts</a>
       </li>
       <li>
         Special.XowaSystemData: Add Special Page to show contents of session log and other files; EX:Menu -&gt; Help -&gt; System data.
@@ -2708,7 +2708,7 @@
         Javascript.Timeline: Remove &lt;timeline&gt; tag from within pre (affects timeline sometimes showing in black colors when jtidy is enabled); EX:old: &lt;pre&gt;&lt;timeline&gt;code&lt;/timeline&gt;&lt;/pre&gt;; new: &lt;pre&gt;code&lt;/pre&gt;. See: <a href="https://fr.wikipedia.org/wiki/Quimper" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Quimper</a>
       </li>
       <li>
-        Javascript.TableSorter: Sort by &lt;input&gt; if available; EX:bin/any/javascript/article-view/jquery.tablesorter.js. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_62" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        Javascript.TableSorter: Sort by &lt;input&gt; if available; EX:bin/any/javascript/article-view/jquery.tablesorter.js. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_62" title="Options/Shortcuts">Options/Shortcuts</a>
       </li>
       <li>
         Url: Escape &amp; for external links when using default view_web launcher of "cmd /c" on Windows; EX:cmd /c start "http://www.culture.gouv.fr/public/mistral/merimee_fr?ACTION=CHERCHER&amp;FIELD_1=REF&amp;VALUE_1=PA59000162". See: <a href="https://fr.wikipedia.org/wiki/Liste_des_monuments_historiques_du_Nord_%28A-L%29" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Liste_des_monuments_historiques_du_Nord_%28A-L%29</a>
@@ -2727,7 +2727,7 @@
     </p>
     <ul>
       <li>
-        Doc: Update license info for third-party XOWA components. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_63" title="Help/About" class="xowa-visited">Help/About</a>
+        Doc: Update license info for third-party XOWA components. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_63" title="Help/About">Help/About</a>
       </li>
     </ul>
     <p>
@@ -3904,7 +3904,7 @@
         Import: Default to wikimedia.org as primary dump server {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_85" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
       <li>
-        Import: Default cache to 100 MB max and 75 MB min. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_86" title="Options/Files" class="xowa-visited">Options/Files</a>
+        Import: Default cache to 100 MB max and 75 MB min. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_86" title="Options/Files">Options/Files</a>
       </li>
       <li>
         Options: Reorganize tab layout. See: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_87" title="Options" class="xowa-visited">Options</a>
@@ -4026,7 +4026,7 @@
         Math: Note that MikTeX may fail to update images dynamically for first page {detected by William}.
       </li>
       <li>
-        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents" class="xowa-visited">Help/Contents</a>
+        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents">Help/Contents</a>
       </li>
     </ul>
     <p>
@@ -4174,7 +4174,7 @@
         Url: Fix "zh.wikipedia.org" going to "zh.wikipedia.org/wiki/Main_Page" instead of "zh.wikipedia.org/wiki/Wikipedia:首页". [broken since:v1.1.3.1]
       </li>
       <li>
-        Url: Fix "/home/wiki/Main_Page" redirecting to "/home/wiki/home". See: <a href="http://xowa.org/home/wiki/Main_Page.html" id="xolnki_95" title="Main Page" class="xowa-visited">Main_Page</a> [broken since:v1.2.2.1]
+        Url: Fix "/home/wiki/Main_Page" redirecting to "/home/wiki/home". See: <a href="http://xowa.org/home/wiki/Main_Page.html" id="xolnki_95" title="Main Page">Main_Page</a> [broken since:v1.2.2.1]
       </li>
       <li>
         File.Offline: Show images from &lt;imageMap&gt;. See: <a href="https://en.wikipedia.org/wiki/Portal:Canada" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Portal:Canada</a> [broken since:v1.1.3.1]
@@ -4220,7 +4220,7 @@
     </p>
     <ul>
       <li>
-        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </li>
       <li>
         Messages: Add "Contatti" message for contactpage in itwiki sidebar. See: <a href="https://it.wikipedia.org" rel="nofollow" class="external free">https://it.wikipedia.org</a>
@@ -4391,7 +4391,7 @@
         Wikisource.Page: Support onlysection; EX:&lt;pages onlysection="a"/&gt;.
       </li>
       <li>
-        Import.List: Update list of WMF wikis (from 674 to 804); EX:pl.wikivoyage.org. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_101" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
+        Import.List: Update list of WMF wikis (from 674 to 804); EX:pl.wikivoyage.org. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_101" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
       </li>
       <li>
         Gui.Url_bar: Open articles with same name as language code; EX:war -&gt; current_wiki/wiki/war, not war.wikipedia.org.
