--- a/home/wiki/Change_log/v3.9.2.1.html
+++ b/home/wiki/Change_log/v3.9.2.1.html
@@ -89,7 +89,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Xtn/Page_sync.html" id="xolnki_2" title="App/Xtn/Page sync" class="xowa-visited">App/Xtn/Page_sync</a> <a href="http://xowa.org/home/wiki/Options/Page_sync.html" id="xolnki_3" title="Options/Page sync" class="xowa-visited">Options/Page_sync</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Xtn/Page_sync.html" id="xolnki_2" title="App/Xtn/Page sync">App/Xtn/Page_sync</a> <a href="http://xowa.org/home/wiki/Options/Page_sync.html" id="xolnki_3" title="Options/Page sync">Options/Page_sync</a>
       </dd>
     </dl>
     <ul>
@@ -279,7 +279,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_5" title="Dev/Command-line/Dumps" class="xowa-visited">Dev/Command-line/Dumps</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_5" title="Dev/Command-line/Dumps">Dev/Command-line/Dumps</a>
       </dd>
     </dl>
     <ul>
