--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -320,7 +320,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window" class="xowa-visited">Window</a>
+              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window">Window</a>
             </td>
             <td>
               Window Font and Startup position
@@ -365,7 +365,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Scripting.html" id="xolnki_7" title="Options/Scripting" class="xowa-visited">Scripting</a>
+              <a href="http://xowa.org/home/wiki/Options/Scripting.html" id="xolnki_7" title="Options/Scripting">Scripting</a>
             </td>
             <td>
               Add scripts to customize the page
@@ -373,7 +373,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_8" title="Options/Shortcuts" class="xowa-visited">Shortcuts</a>
+              <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_8" title="Options/Shortcuts">Shortcuts</a>
             </td>
             <td>
               Keyboard shortcuts
@@ -410,7 +410,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_12" title="Options/Files" class="xowa-visited">Files</a>
+              <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_12" title="Options/Files">Files</a>
             </td>
             <td>
               File / image options
@@ -426,7 +426,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Page_sync.html" id="xolnki_14" title="Options/Page sync" class="xowa-visited">Page_sync</a>
+              <a href="http://xowa.org/home/wiki/Options/Page_sync.html" id="xolnki_14" title="Options/Page sync">Page_sync</a>
             </td>
             <td>
               Synchronize your offline page with the latest online one
@@ -434,7 +434,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_15" title="Options/Category" class="xowa-visited">Category</a>
+              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_15" title="Options/Category">Category</a>
             </td>
             <td>
               Category options
@@ -455,7 +455,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_17" title="Options/HTML" class="xowa-visited">Appearance</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_17" title="Options/HTML">Appearance</a>
             </td>
             <td>
               HTML page font and custom CSS
@@ -463,7 +463,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Wiki_HTML.html" id="xolnki_18" title="Options/Wiki HTML" class="xowa-visited">Wiki</a>
+              <a href="http://xowa.org/home/wiki/Options/Wiki_HTML.html" id="xolnki_18" title="Options/Wiki HTML">Wiki</a>
             </td>
             <td>
               Miscellaneous wiki HTML options
