--- a/home/wiki/Options/Import.html
+++ b/home/wiki/Options/Import.html
@@ -323,13 +323,13 @@ li.active a, li.active a:hover
                 <option value='raw'>
                   text
                 </option>
-                <option value='gzip'>
+                <option value='gzip' selected='selected'>
                   gzip
                 </option>
                 <option value='bzip2'>
                   bzip2
                 </option>
-                <option value='xz' selected='selected'>
+                <option value='xz'>
                   xz
                 </option>
               </select>
@@ -419,7 +419,7 @@ http://ftp.fi.muni.cz/pub/wikimedia/
               Max file size for single text database: <sup id="cite_ref-layout_text_max_8-0" class="reference"><a href="#cite_note-layout_text_max-8">[9]</a></sup>
             </td>
             <td>
-              <input xowa_prop="xowa.api.bldr.wiki.import.layout_text_max" class="options_textbox" style="width: 400px;" id='xowa_prop_9' value='1500'>
+              <input xowa_prop="xowa.api.bldr.wiki.import.layout_text_max" class="options_textbox" style="width: 400px;" id='xowa_prop_9' value='0'>
             </td>
           </tr>
           <tr>
@@ -427,7 +427,7 @@ http://ftp.fi.muni.cz/pub/wikimedia/
               Max file size for single file database: <sup id="cite_ref-layout_text_max_8-1" class="reference"><a href="#cite_note-layout_text_max-8">[9]</a></sup>
             </td>
             <td>
-              <input xowa_prop="xowa.api.bldr.wiki.import.layout_file_max" class="options_textbox" style="width: 400px;" id='xowa_prop_10' value='1500'>
+              <input xowa_prop="xowa.api.bldr.wiki.import.layout_file_max" class="options_textbox" style="width: 400px;" id='xowa_prop_10' value='0'>
             </td>
           </tr>
           <tr>
@@ -435,7 +435,7 @@ http://ftp.fi.muni.cz/pub/wikimedia/
               Max file size for single html database: <sup id="cite_ref-layout_text_max_8-2" class="reference"><a href="#cite_note-layout_text_max-8">[9]</a></sup>
             </td>
             <td>
-              <input xowa_prop="xowa.api.bldr.wiki.import.layout_html_max" class="options_textbox" style="width: 400px;" id='xowa_prop_11' value='1500'>
+              <input xowa_prop="xowa.api.bldr.wiki.import.layout_html_max" class="options_textbox" style="width: 400px;" id='xowa_prop_11' value='0'>
             </td>
           </tr>
         </table>
