--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -60,7 +60,7 @@
               <a href="http://xowa.org/home/wiki/App/Import/Simple_Wikipedia.html" id="xolnki_7" title="App/Import/Simple Wikipedia">Simple Wikipedia</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia" class="xowa-visited">English Wikipedia</a>
+              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia">English Wikipedia</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Import/Other_wikis.html" id="xolnki_9" title="App/Import/Other wikis">Other wikis</a>
@@ -181,7 +181,7 @@
               <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_24" title="Dev/Command-line">Overview</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_25" title="Dev/Command-line/Dumps" class="xowa-visited">Image dumps</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_25" title="Dev/Command-line/Dumps">Image dumps</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Command-line/Wikidata.html" id="xolnki_26" title="Dev/Command-line/Wikidata">Wikidata</a>
@@ -264,7 +264,7 @@
               <a href="http://xowa.org/home/wiki/App/Xtn/Html/Scripts.html" id="xolnki_40" title="App/Xtn/Html/Scripts">Sortable/collapsible tables</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_41" title="App/Xtn/Import/Dansguardian" class="xowa-visited">Dansguardian filter</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_41" title="App/Xtn/Import/Dansguardian">Dansguardian filter</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_42" title="App/Xtn/Browser/XOWA viewer">Firefox Addon</a>
@@ -277,7 +277,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_43" title="Diagnostics" class="xowa-visited">Diagnostics</a>
+              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_43" title="Diagnostics">Diagnostics</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Setup/Installation/Self_extracting_exe.html" id="xolnki_44" title="App/Setup/Installation/Self extracting exe">Self extracting exe</a>
