--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -113,7 +113,7 @@
       </li>
     </ul>
     <p>
-      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_4" title="Change log" class="xowa-visited">change log</a>.
+      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_4" title="Change log">change log</a>.
     </p>
     <p>
       For more details about the release schedule, please see <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_5" title="Help/Release schedule">the release schedule</a>.
@@ -162,7 +162,7 @@
         </dl>
       </dd>
       <dd>
-        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents" class="xowa-visited">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
+        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
       </dd>
     </dl>
     <dl>
@@ -194,7 +194,7 @@
         After exploring Simple Wikipedia, you may want to import another wiki such as English Wikipedia, French Wiktionary, German Wikisource, Wikidata, Commons, etc.
       </dd>
       <dd>
-        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online" class="xowa-visited">import online</a>.
+        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online">import online</a>.
       </dd>
     </dl>
     <h5>
@@ -219,7 +219,7 @@
         Press Run
       </li>
       <li>
-        For more instructions, see <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_14" title="App/Import/Download Central" class="xowa-visited">App/Import/Download_Central</a>
+        For more instructions, see <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_14" title="App/Import/Download Central">App/Import/Download_Central</a>
       </li>
     </ul>
     <h5>
@@ -308,7 +308,7 @@
             If the font size is too small, right-click and choose Font Increase
           </li>
           <li>
-            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_26" title="Options/Window" class="xowa-visited">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_27" title="Options/HTML" class="xowa-visited">Options/HTML</a>
+            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_26" title="Options/Window">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_27" title="Options/HTML">Options/HTML</a>
           </li>
         </ul>
       </li>
@@ -372,7 +372,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_34" title="Dashboard/Import/Online" class="xowa-visited">Import Online</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_34" title="Dashboard/Import/Online">Import Online</a>
         </td>
         <td>
           Import a wiki from a list of 828 known Wikimedia Foundation wikis
@@ -396,7 +396,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_37" title="Dashboard/Wiki maintenance" class="xowa-visited">Wiki Maintenance</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_37" title="Dashboard/Wiki maintenance">Wiki Maintenance</a>
         </td>
         <td>
           Update your wikis if they are outdated
@@ -412,7 +412,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_39" title="Help/Contents" class="xowa-visited">Contents</a>
+          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_39" title="Help/Contents">Contents</a>
         </td>
         <td>
           View all help topics
@@ -428,7 +428,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_41" title="Change log" class="xowa-visited">Change log</a>
+          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_41" title="Change log">Change log</a>
         </td>
         <td>
           View changes for each XOWA release
@@ -436,7 +436,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_42" title="Diagnostics" class="xowa-visited">Diagnostics</a>
+          <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_42" title="Diagnostics">Diagnostics</a>
         </td>
         <td>
           Run test pages to make sure that XOWA works on your system.
